--- a/biblioklept/ios/Runner/Info.plist
+++ b/biblioklept/ios/Runner/Info.plist
@@ -43,6 +43,9 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSCameraUsageDescription</key>
+	<string>We use the camera to scan barcodes </string>
+	<key>NSPhotoLibraryUsageDescription</key>
 	<key>CADisableMinimumFrameDurationOnPhone</key>
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
