--- a/biblioklept/pubspec.yaml
+++ b/biblioklept/pubspec.yaml
@@ -31,6 +31,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  mobile_scanner: ^1.0.0
+  flutter_barcode_scanner: ^2.0.0
+ 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -39,6 +42,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+    
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
