--- a/biblioklept/pubspec.yaml
+++ b/biblioklept/pubspec.yaml
@@ -33,7 +33,8 @@ dependencies:
     sdk: flutter
   mobile_scanner: ^1.0.0
   flutter_barcode_scanner: ^2.0.0
- 
+  camera: ^0.9.4+1
+  gallery_saver: ^2.0.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
