--- a/biblioklept/pubspec.yaml
+++ b/biblioklept/pubspec.yaml
@@ -41,10 +41,11 @@ dependencies:
   cupertino_icons: ^1.0.2
   qr_flutter: ^4.0.0
   intl: ^0.17.0
+  sqflite: ^2.2.2
+  path: ^1.8.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
-    
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
